--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -37,6 +37,12 @@ ol, ul {
 	list-style: none;
 }
 
+.pImage {
+	width: 350px;
+	height: 225px;
+	object-fit: cover;
+}
+
 blockquote, q {
 	quotes: none;
 }
